main/default/objects/File_Storage__mdt/File_Storage__mdt.object-meta.xml
<CustomObject>
    <description>File Storage Custom Metadata Types</description>
    <label>File Storage</label>
    <pluralLabel>File Storages</pluralLabel>
</CustomObject>