main/default/objects/File_Storage__mdt/fields/Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_ID__c</fullName>
    <label>Client ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>