main/default/objects/File_Storage__mdt/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <label>Client Secret</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>