main/default/objects/File_Storage__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>