main/default/objects/File_Storage__mdt/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <label>Resource ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>