main/default/objects/File_Storage__mdt/fields/Root_Folder__c.field-meta.xml
<CustomField>
    <fullName>Root_Folder__c</fullName>
    <label>Root Folder</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>