main/default/objects/File_Storage__mdt/fields/SharePoint_Access_Token__c.field-meta.xml
<CustomField>
    <fullName>SharePoint_Access_Token__c</fullName>
    <label>SharePoint Access Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>