main/default/objects/File_Storage__mdt/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>