main/default/objects/File_Storage__mdt/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <label>Tenant ID</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>