main/default/objects/File_Storage__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SharePointOnline</fullName>
                <default>true</default>
                <label>SharePointOnline</label>
            </value>
            <value>
                <fullName>SharePointAzure</fullName>
            </value>
            <value>
                <fullName>OneDrive</fullName>
            </value>
            <value>
                <fullName>GoogleDrive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>